modifed client and fix api

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,2 @@
-<mat-toolbar color="primary">
-    <span>My App</span>
-    <span class="example-spacer"></span>
-    <button mat-raised-button color="warn" *ngIf="!adalService.userInfo.authenticated">Sign In</button>
-    <button mat-raised-button color="warn" *ngIf="adalService.userInfo.authenticated">Sign Out</button>
-</mat-toolbar>
+<app-navbar></app-navbar>
+
